--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ vispy = "^0.12.2"
 ffmpeg-python = "^0.2.0"
 imageio = "^2.27.0"
 imageio-ffmpeg = "^0.4.8"
+jupyterlab = "^3.6.3"
 
 
 [build-system]
