--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ ffmpeg-python = "^0.2.0"
 imageio = "^2.27.0"
 imageio-ffmpeg = "^0.4.8"
 jupyterlab = "^3.6.3"
+taichi = "^1.5.0"
+taichi-glsl = "^0.0.12"
 
 
 [build-system]
