--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ scikit-learn = "^1.2.2"
 tqdm = "^4.65.0"
 matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
-holoviews = "^1.15.4"
 vispy = "^0.12.2"
 ffmpeg-python = "^0.2.0"
 imageio = "^2.27.0"
@@ -24,6 +23,7 @@ imageio-ffmpeg = "^0.4.8"
 jupyterlab = "^3.6.3"
 taichi = "^1.5.0"
 taichi-glsl = "^0.0.12"
+holoviews = {extras = ["recommended"], version = "^1.15.4"}
 
 
 [build-system]
